<?xml version="1.0" encoding="utf-8"?>
<com.carpenter.login.customViews.CustomScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingBottom="100dp"
    tools:context=".phoneLoginScreen.PhoneLoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/login"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20sp"
                android:text="@string/login_with_phone"
                android:textColor="?colorOnBackground"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/a_verification_code_will_be_sent_to_your_phone"
                android:textColor="#555" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                app:errorEnabled="true"
                android:layout_marginEnd="10dp"
                android:hint="@string/label_phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp">

                <Button
                    android:id="@+id/login_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="12dp"
                    android:text="@string/send" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/login_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:indeterminate="true"
                    android:padding="10dp"
                    android:visibility="gone"
                    app:indicatorSize="24dp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/verify_your_number"
                android:textColor="?colorOnBackground"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/to_verify_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/code_sent_to_number"
                android:textColor="?colorOnBackground" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/verification_code_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                app:errorEnabled="true"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/label_verification_code">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/verification_code"
                    android:layout_width="match_parent"
                    android:imeOptions="actionDone"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp">

                <Button
                    android:id="@+id/verification_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="12dp"
                    android:text="@string/verify" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/verification_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:indeterminate="true"
                    android:padding="10dp"
                    android:visibility="gone"
                    app:indicatorSize="24dp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/send_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:text="@string/did_not_receive_code"
                android:textColor="?colorPrimary" />

        </LinearLayout>

    </RelativeLayout>

</com.carpenter.login.customViews.CustomScrollView>