<?xml version="1.0" encoding="utf-8"?><!--Custom view to enable and disable layout in loading state-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".loginScreen.LoginFragment">

    <!--Don't use the built in facebook button.
    Build it yourself and set a listener to trigger the built it one-->
    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/background_bottom_curved" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

    </LinearLayout>

    <com.carpenter.login.customViews.CustomScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/app_name"
                android:textColor="?colorOnPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/app_description"
                android:textColor="?colorOnPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="30dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/progress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"
                        android:visibility="gone"
                        app:hideAnimationBehavior="outward"
                        app:indeterminateAnimationType="contiguous"
                        app:indicatorColor="@array/progress_indicator_colors"
                        app:showAnimationBehavior="inward"
                        app:trackThickness="7dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/log_in"
                        android:textColor="?colorOnSurface"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_container"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:hint="@string/label_email"
                        app:boxBackgroundColor="?colorSurface"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_container"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:hint="@string/label_password"
                        app:boxBackgroundColor="?colorSurface"
                        app:endIconMode="password_toggle"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:text="@string/forgot_password"
                        android:textColor="?colorPrimary" />

                    <Button
                        android:id="@+id/sign_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="40dp"
                        android:text="@string/sign_in" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:alpha="0.3"
                            android:background="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@drawable/background_rounded_5"
                            android:backgroundTint="#eee"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:text="@string/or"
                            android:textAllCaps="true"
                            android:textColor="?colorOnSurface" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="30dp">

                        <ImageView
                            android:id="@+id/twitter"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="?android:attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/continue_with_twitter"
                            android:src="@drawable/ic_twitter" />

                        <ImageView
                            android:id="@+id/fake_facebook"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="?android:attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/continue_with_facebook"
                            android:src="@drawable/ic_facebook" />

                        <ImageView
                            android:id="@+id/google"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="?android:attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/continue_with_google"
                            android:src="@drawable/ic_google" />

                        <ImageView
                            android:id="@+id/phone"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="?android:attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/continue_with_phone"
                            android:src="@drawable/ic_phone" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/do_not_have_account_sign_up_instead"
                android:textColor="?colorOnBackground" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="?colorPrimary" />

        </LinearLayout>

    </com.carpenter.login.customViews.CustomScrollView>

</RelativeLayout>

