<?xml version="1.0" encoding="utf-8"?>
<com.carpenter.login.customViews.CustomScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="100dp"
    tools:context=".emailVerification.EmailVerificationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20sp"
            android:text="@string/verify_your_email"
            android:textColor="?colorOnBackground"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/a_verification_email_was_sent_to_your_email"
            android:textColor="?colorOnBackground" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="email.example@gmail.com" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="10dp">

            <Button
                android:id="@+id/verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="12dp"
                android:text="@string/verify" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:padding="10dp"
                android:visibility="gone"
                app:indicatorSize="24dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/send_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:padding="10dp"
            android:text="@string/i_did_not_receive_a_verification_email"
            android:textColor="?colorPrimary" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="?colorPrimary" />

    </LinearLayout>

</com.carpenter.login.customViews.CustomScrollView>